fix vertical alignment with signout button [test-visual]

--- a/src/components/header/_header.scss
+++ b/src/components/header/_header.scss
@@ -60,7 +60,8 @@
       margin-top: 0.7rem;
     }
 
-    &--with-description {
+    &--with-description,
+    &--with-button {
       @include mq(m) {
         margin-top: 0.45rem;
       }
